--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -174,8 +174,7 @@
         <commons-io.version>2.6</commons-io.version>
         <commons-lang3>3.8.1</commons-lang3>
         <easymock.version>4.0.2</easymock.version>
-        <jackson-databind.version>2.9.9.2</jackson-databind.version>
-        <jackson.version>2.9.9</jackson.version>
+        <jackson.version>2.10.0.pr2</jackson.version>
         <apache-shiro.version>1.4.0</apache-shiro.version>
         <assertj.version>3.11.1</assertj.version>
         <rest-assured.version>3.3.0</rest-assured.version>
@@ -1037,7 +1036,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-databind.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.module</groupId>
